src/components/Carrito/Carrito.scss
.carrito {
    width: 90vw;
    margin: 10px;
    border-radius: 10px;
    overflow: hidden;
    box-shadow: 0px 3px 5px 4px rgba(0, 0, 0, 0.4);

    .grid {
        padding: 20px;
        display: grid;
        grid-template-columns: 1fr auto;
        align-items: center;
        color: white;
        justify-items: center;

        .nombre {
            font-weight: bold;
            font-size: 6vw;
        }

        .desc {
            font-size: 20px;
        }

        .icon {
            grid-column: 2;
            grid-row: 1 / 3;
            justify-self: right;
            font-size: 45px;
        }
    }
}

